<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ElevenChat</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_confirm_image">ConfirmImageActivity</string>
    <string name="image_description">Image</string>
    <string name="retake_image">Retake Image</string>
    <string name="send_image">Send Image</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email_label">Email Address</string>
    <string name="password_label">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="firebase_url">https://blinding-inferno-356.firebaseio.com</string>
    <string name="title_activity_send_image">Send Image</string>
    <string name="send_picture">Send Picture to Friends</string>
    <string name="title_activity_image">ImageActivity</string>

</resources>
