<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.elevenfifty.www.elevenchat.LoginActivity"
    android:id="@+id/loginLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email_label"
        android:id="@+id/emailLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password_label"
        android:id="@+id/passwordLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/emailLabel"
        android:layout_margin="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/emailLabel"
        android:layout_alignBaseline="@+id/emailLabel"
        android:layout_marginRight="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:layout_below="@id/email"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@+id/passwordLabel"
        android:layout_alignLeft="@+id/email"
        android:layout_marginRight="10dp" />

    <Button
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:text="@string/login_button"
        android:id="@+id/loginButton"
        android:layout_below="@id/password"
        android:layout_alignRight="@id/password"
        android:layout_alignEnd="@id/password"
        android:layout_marginTop="10dp"
        android:onClick="login" />

    <Button
        android:layout_width="120dp"
        android:layout_height="44dp"
        android:text="@string/signup_button"
        android:id="@+id/signUpButton"
        android:layout_alignBottom="@id/loginButton"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        android:onClick="signUp" />
</RelativeLayout>